; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra/extr_deprecated.c_link_path.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra/extr_deprecated.c_link_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reporter_3in2_baton = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* (i32, i8*, i8*, i32, i32, i32, i8*, i32*)* }

@svn_depth_infinity = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i8*, i32, i32, i8*, i32*)* @link_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @link_path(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4, i8* %5, i32* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.reporter_3in2_baton*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = bitcast i8* %16 to %struct.reporter_3in2_baton*
  store %struct.reporter_3in2_baton* %17, %struct.reporter_3in2_baton** %15, align 8
  %18 = load %struct.reporter_3in2_baton*, %struct.reporter_3in2_baton** %15, align 8
  %19 = getelementptr inbounds %struct.reporter_3in2_baton, %struct.reporter_3in2_baton* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32* (i32, i8*, i8*, i32, i32, i32, i8*, i32*)*, i32* (i32, i8*, i8*, i32, i32, i32, i8*, i32*)** %21, align 8
  %23 = load %struct.reporter_3in2_baton*, %struct.reporter_3in2_baton** %15, align 8
  %24 = getelementptr inbounds %struct.reporter_3in2_baton, %struct.reporter_3in2_baton* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = load i8*, i8** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* @svn_depth_infinity, align 4
  %30 = load i32, i32* %12, align 4
  %31 = load i8*, i8** %13, align 8
  %32 = load i32*, i32** %14, align 8
  %33 = call i32* %22(i32 %25, i8* %26, i8* %27, i32 %28, i32 %29, i32 %30, i8* %31, i32* %32)
  ret i32* %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
